create endpoint allocation
