# service/src/main/resources/api.yml
@@ -97,6 +97,28 @@ paths:
         422:
           $ref: '#/components/responses/UnprocessableEntity'
 
+  /allocations:
+    post:
+      summary: 'Create an allocation'
+      operationId: createAllocation
+      tags:
+        - allocation
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateAllocationDTO'
+        required: true
+      responses:
+        201:
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AllocationDTO'
+        422:
+          $ref: '#/components/responses/UnprocessableEntity'
+
 components:
   schemas:
     RoomDTO:
@@ -121,6 +143,47 @@ components:
       type: object
       allOf:
         - $ref: '#/components/schemas/CreateRoomDTO'
+
+    CreateAllocationDTO:
+      type: object
+      properties:
+        subject:
+          type: string
+        startAt:
+          type: string
+          format: date-time
+        endAt:
+          type: string
+          format: date-time
+        roomId:
+          type: integer
+          format: int64
+        employeeName:
+          type: string
+        employeeEmail:
+          type: string
+
+    AllocationDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        subject:
+          type: string
+        startAt:
+          type: string
+          format: date-time
+        endAt:
+          type: string
+          format: date-time
+        roomId:
+          type: integer
+          format: int64
+        employeeName:
+          type: string
+        employeeEmail:
+          type: string
 
     ResponseError:
       type: object
